--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
       - 19999:19999
       - 19998:8080
       - 19997:3128
+    networks:
+      - mainet
   portainer:
     image: portainer/portainer
     container_name: portainer
@@ -28,17 +30,32 @@ services:
       - portainer_data:/data
     ports:
       - 9000:9000
+    networks:
+      - mainet
   adminer:
    image: adminer
    restart: always
    container_name: adminer
    ports:
       - 19995:8080
+   networks:
+      - mainet
   mysql:
     image: mariadb:10.2.21
+    container_name: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PWD}
+      ## Use % to allow remote access to all addresses. 
+      ## Generally not recommended by some people to allow for root.
+      MYSQL_ROOT_HOST: '%' 
+
+      # This allows ip ranges from 192.168.0.49 to 192.168.0.54 to connect to root
+      #MYSQL_ROOT_HOST: 192.168.0.48/255.255.255.248
+    ports:
+      - 3306:3306
+    networks:
+      - mainet
   mongo:
     image: mongo
     restart: always
@@ -50,6 +67,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PWD}
     ports:
       - 27017:27017
+    networks:
+      - mainet
   mongo-express:
     container_name: mongo-gui
     image: mongo-express
@@ -61,5 +80,10 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PWD}
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_ROOT_USERNAME}
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_ROOT_PWD}
+    networks:
+      - mainet
 volumes:
   portainer_data:
+networks:
+  mainet:
+    driver: bridge
