incubadora itinerante changes

--- a/Caddyfile
+++ b/Caddyfile
@@ -9,6 +9,11 @@ https://misitioba.com, https://www.misitioba.com {
 	root projects/ba-landing/public_html
 }
 
+https://mys.misitioba.com {
+	import wildcard_cert
+  proxy / localhost:8080
+}
+
 https://adminer.misitioba.com {
 	import wildcard_cert
   proxy / localhost:19995
@@ -61,6 +66,11 @@ https://misitioba.wrapkend.com {
 	root instances/misitioba/public_html
 }
 
+https://strawhats.misitioba.com {
+	import wildcard_cert
+	root projects/mys-hats/docs
+}
+
 https://incubadoraitinerante.com, http://incubadoraitinerante.com, https://www.incubadoraitinerante.com , http://www.incubadoraitinerante.com {
 	proxy / localhost:8200
 }
@@ -68,13 +78,5 @@ https://wrapkend.com, http://wrapkend.com, https://www.wrapkend.com, http://www.
 	proxy / localhost:3601
 }
 
-https://strawhatsdemo.misitioba.com {
-	import wildcard_cert
-	root projects/mys-hats/docs
-}
-
-https://strawhatscollection.com {
-	root projects/mys-hats/docs
-}
 
 	
