--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
     "dotenv": "^6.2.0",
+    "node-sass": "^4.12.0",
+    "pug": "^2.0.3",
+    "sander": "^0.6.0",
     "yargs": "^12.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
