--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,9 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    ports:
-      - 19999:19999
-      - 19998:8080
-      - 19997:3128
+    networks:
+      - backend
+      - caddy
   portainer:
     image: portainer/portainer
     container_name: portainer
@@ -26,16 +25,16 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
-    ports:
-      - 9000:9000
+    networks:
+    - backend
+    - caddy
   adminer:
    image: adminer
    restart: always
    container_name: adminer
-   ports:
-      - 19995:8080
    networks:
     - backend
+    - caddy
   mysql:
     image: mariadb:10.2.21
     container_name: mysql
@@ -65,12 +64,16 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PWD}
     ports:
       - 27017:27017
+    networks:
+      - backend
+      - caddy
   mongo-express:
     container_name: mongo-gui
     image: mongo-express
     restart: always
-    ports:
-      - 8081:8081
+    networks:
+      - backend
+      - caddy
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PWD}
@@ -80,3 +83,6 @@ volumes:
   portainer_data:
 networks:
   backend:
+  caddy:
+    external:
+      name: caddy-node_caddy
